--- a/style.css
+++ b/style.css
@@ -275,14 +275,15 @@ h1 {
 .shopblock {
 	float: left;
 	max-width: 420px;
-	margin: 20px;
-	margin-left: 30px;
+	height: 345px;
+	margin: 30px;
 }
 
 .shopblock img {
 	float: left;
 	margin: 0 10px;
-	max-width: 180px;
+	max-width: 150px;
+	max-height: 280px
 }
 
 .bucket {
@@ -384,10 +385,6 @@ h3 {
 /* TEMPORARY */	
 
 .moreinfo {
-/* TEMPORARY */	
-	display: none;
-/* TEMPORARY */	
-
 	float: right;
 	background-color: #10c200;
 	padding: 12px 10px 10px;
