--- a/style.css
+++ b/style.css
@@ -330,6 +330,10 @@ h3 {
 	width: 320px;
 }
 
+.qty1 {
+	margin-bottom: 5px;
+}
+
 .call {
 	text-align: right;
 }
@@ -340,6 +344,7 @@ h3 {
 	font-weight: bold;
 	margin-bottom: 10px;
 }
+
 
 .shopbuttons {
 	width: 420px;
@@ -479,6 +484,10 @@ h3 {
 	font-size: 18px;
 	line-height: 1.5;
 	margin-top: 50px
+}
+
+.vet {
+	color: #8300ce;
 }
 
 h4 {
