--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ height: 100%;
 	background-image: url('images/website/webtreats_light_wood1b.jpg');
 }
 
-a, img {border:none;	}
+a, img {border:none;}
 
 address, article, aside, canvas,
 figcaption, figure, footer, header,
@@ -344,6 +344,11 @@ h3 {
 	font-size: 18px;
 }
 
+.qty1 span {
+	font-weight: bold;
+	font-size: 18px;
+}
+
 .call {
 	text-align: right;
 }
@@ -354,7 +359,6 @@ h3 {
 	font-weight: bold;
 	margin-bottom: 10px;
 }
-
 
 .shopbuttons {
 	width: 420px;
@@ -399,8 +403,14 @@ h3 {
 
 .ordergroup {
 	width: 130px;
-	float: right;
+	float: left;
+	margin-left: 10px;
 }
+
+.orderfix {
+	margin-left: 100px;
+}
+
 .ordername {
 	text-align: center;
 	text-indent: 12px;
@@ -408,6 +418,10 @@ h3 {
 .orderbutton {
 	width: 100px;
 	margin-left: 20px;
+}
+
+.ordername b {
+	margin-left: 10px;
 }
 
 .texaslink {
@@ -454,10 +468,18 @@ h3 {
 	max-width: 200px;
 }
 
+.morebucket {
+	max-width: 250px;
+}
+
 .moreimg {
 	max-width: 550px;
 	height: 300px;
 	margin: 20px auto 30px;
+}
+
+.moreimgbucket {
+	max-width: 650px;
 }
 
 .skinnyproduct {
@@ -495,7 +517,7 @@ h3 {
 	width: 400px;
 	height: 225px;
 	float: left;
-	margin: 0 0 20px 60px;
+	margin: 0 0 20px 80px;
 	border: 1px #8300CE solid;
 }
 
@@ -506,7 +528,7 @@ h3 {
 	font-weight: bold;
 	font-size: 18px;
 	line-height: 1.5;
-	margin-top: 50px
+	margin-top: 50px;
 }
 
 .vet {
@@ -523,8 +545,8 @@ h4 {
 	float: left; 
 	color: #AC7ED5; 
 	font-size: 150px; 
-	line-height: 80px; 
-	padding-top: 4px; 
+	line-height: 30px; 
+	padding-top: 30px; 
 	padding-right: 8px; 
 	padding-left: 3px; 
 	font-family: Georgia, "Times New Roman", Times, serif;
@@ -556,6 +578,16 @@ h4 {
 	margin-left: 40px;
 	margin-right: 40px;
 	margin-top: 0;
+}
+
+.listfix {
+	width: 300px;
+	font-size: 18px;
+	font-weight: bold;
+	margin-left: 235px;
+	padding: 10px;
+	background-color: #ac7ed0;
+
 }
 
 .listleft {
