--- a/style.css
+++ b/style.css
@@ -337,6 +337,7 @@ h3 {
 
 .qty1 {
 	margin-bottom: 5px;
+	text-align: center;
 }
 
 .qty span {
@@ -443,6 +444,10 @@ h3 {
 	margin-right: 50px;
 }
 
+.more1 {
+	display: none;
+}
+
 .allbutton {
 	width: 260px;
 	margin: 20px auto;
@@ -466,6 +471,7 @@ h3 {
 
 .moreproduct {
 	max-width: 200px;
+	margin-left: 50px;
 }
 
 .morebucket {
@@ -529,6 +535,7 @@ h3 {
 	font-size: 18px;
 	line-height: 1.5;
 	margin-top: 50px;
+	margin-right: 40px;
 }
 
 .vet {
