added several more product pages

--- a/style.css
+++ b/style.css
@@ -287,7 +287,7 @@ h1 {
 .shopblock {
 	float: left;
 	max-width: 420px;
-	height: 345px;
+	height: 360px;
 	margin: 30px;
 	height: 300px
 }
@@ -300,6 +300,7 @@ h1 {
 
 .bucket {
 	padding-top: 50px;
+	padding-bottom: 50px;
 	height: auto;
 	max-width: 140px;
 }
@@ -332,7 +333,7 @@ h3 {
 	padding-right: 20px;
 	font-style: italic;
 	margin-bottom: 30px;
-	width: 320px;
+	width: 360px;
 }
 
 .qty1 {
@@ -408,8 +409,37 @@ h3 {
 	margin-left: 10px;
 }
 
+.fixgroup {
+	margin-top: 60px;
+	margin-left: 0;
+}
+
+.txfix {
+	margin-top: 90px;
+}
+
+.eqname {
+	margin-top: 20px;
+}
+
 .orderfix {
-	margin-left: 100px;
+	margin-left: 70px;
+}
+
+.fix1 {
+	margin-top: -25px;
+}
+
+.descfix {
+	margin-bottom: 20px;
+}
+
+.bucketfix {
+	margin-bottom: 40px;
+}
+
+.morefix {
+	margin-bottom: 10px;
 }
 
 .ordername {
@@ -480,12 +510,17 @@ h3 {
 
 .moreimg {
 	max-width: 550px;
-	height: 300px;
+	height: 320px;
 	margin: 20px auto 30px;
 }
 
 .moreimgbucket {
-	max-width: 650px;
+	max-width: 680px;
+	margin-left: 110px;
+}
+
+.img2 {
+	margin-left: 155px
 }
 
 .skinnyproduct {
@@ -552,8 +587,8 @@ h4 {
 	float: left; 
 	color: #AC7ED5; 
 	font-size: 150px; 
-	line-height: 30px; 
-	padding-top: 30px; 
+	line-height: 10px; 
+	padding-top: 40px; 
 	padding-right: 8px; 
 	padding-left: 3px; 
 	font-family: Georgia, "Times New Roman", Times, serif;
@@ -576,7 +611,7 @@ h4 {
 
 .ingredientblock {
 	max-width: 800px;
-	margin: 0 auto;
+	margin: -20px auto 0;
 }
 
 .ingredientlist {
@@ -589,8 +624,6 @@ h4 {
 
 .listfix {
 	width: 300px;
-	font-size: 18px;
-	font-weight: bold;
 	margin-left: 235px;
 	padding: 10px;
 	background-color: #ac7ed0;
@@ -618,6 +651,11 @@ h4 {
 
 .morebuy {
 	float: left;
+}
+
+.madein {
+	width: 200px;
+	margin: auto auto;
 }
 
 
